--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
+    "cheerio": "^1.0.0-rc.10",
+    "chromium": "^3.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "npm": "^8.5.5",
+    "puppeteer": "^13.5.1",
+    "puppeteer-autoscroll-down": "^1.1.0",
+    "puppeteer-core": "^13.5.1",
+    "sanitize-html": "^2.7.0",
     "sequelize": "^6.17.0",
     "shortid": "^2.2.16"
   },
