--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.7",
