--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
+    "redux-saga-effects": "^1.1.0",
     "sequelize": "^6.17.0",
     "shortid": "^2.2.16"
   },
