--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "body-parser": "^1.19.2",
     "cheerio": "^1.0.0-rc.10",
     "chromium": "^3.0.3",
     "cookie-parser": "^1.4.6",
@@ -20,6 +21,7 @@
     "express": "^4.17.3",
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "npm": "^8.5.5",
