--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1103.0",
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "cheerio": "^1.0.0-rc.10",
@@ -22,6 +23,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "npm": "^8.5.5",
