--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
+		"dotenv": "^16.0.0",
 		"jquery": "^3.6.0",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.2.2",
