--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1103.0",
+    "aws-sdk": "^2.1110.0",
     "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "cheerio": "^1.0.0-rc.10",
+    "chrome-aws-lambda": "^10.1.0",
     "chromium": "^3.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -27,9 +28,9 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "npm": "^8.5.5",
-    "puppeteer": "^13.5.1",
+    "puppeteer": "^13.5.2",
     "puppeteer-autoscroll-down": "^1.1.0",
-    "puppeteer-core": "^13.5.1",
+    "puppeteer-core": "^13.5.2",
     "sanitize-html": "^2.7.0",
     "sequelize": "^6.17.0",
     "shortid": "^2.2.16"
